; ModuleID = '/home/carl/AnghaBench/reactos/base/services/eventlog/extr_file.c_LogfListItemByIndex.c'
source_filename = "/home/carl/AnghaBench/reactos/base/services/eventlog/extr_file.c_LogfListItemByIndex.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_4__* }

@LogFileListCs = common dso_local global i32 0, align 4
@LogFileListHead = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@LOGFILE = common dso_local global i32 0, align 4
@ListEntry = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @LogfListItemByIndex(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  store i32* null, i32** %4, align 8
  store i64 1, i64* %5, align 8
  %6 = call i32 @EnterCriticalSection(i32* @LogFileListCs)
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @LogFileListHead, i32 0, i32 0), align 8
  store %struct.TYPE_4__* %7, %struct.TYPE_4__** %3, align 8
  br label %8

8:                                                ; preds = %20, %1
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %10 = icmp ne %struct.TYPE_4__* %9, @LogFileListHead
  br i1 %10, label %11, label %26

11:                                               ; preds = %8
  %12 = load i64, i64* %5, align 8
  %13 = load i64, i64* %2, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %20

15:                                               ; preds = %11
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %17 = load i32, i32* @LOGFILE, align 4
  %18 = load i32, i32* @ListEntry, align 4
  %19 = call i32* @CONTAINING_RECORD(%struct.TYPE_4__* %16, i32 %17, i32 %18)
  store i32* %19, i32** %4, align 8
  br label %26

20:                                               ; preds = %11
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i32 0, i32 0
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %22, align 8
  store %struct.TYPE_4__* %23, %struct.TYPE_4__** %3, align 8
  %24 = load i64, i64* %5, align 8
  %25 = add nsw i64 %24, 1
  store i64 %25, i64* %5, align 8
  br label %8

26:                                               ; preds = %15, %8
  %27 = call i32 @LeaveCriticalSection(i32* @LogFileListCs)
  %28 = load i32*, i32** %4, align 8
  ret i32* %28
}

declare dso_local i32 @EnterCriticalSection(i32*) #1

declare dso_local i32* @CONTAINING_RECORD(%struct.TYPE_4__*, i32, i32) #1

declare dso_local i32 @LeaveCriticalSection(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
